...
                    })
                }
            }
            .overlay(
                Group {
                    if let message = favoritesVM.message {
                        ToastMessage(message: message)
                            .accessibilityIdentifier("ToastMessage") 
                    }
                   
                },
                alignment: .bottom
                
...
            }
            
            ToolbarItem(placement: .principal) {
                Text(movie.title ?? "")
                    .font(.headline)
                    .foregroundColor(.white)
                    .accessibilityIdentifier("DetailTitle")
            }
        }
    }
}

#Preview {
...
