...
                            .foregroundColor(isFavorite ? .red : .white)
                            .frame(width: 24, height: 24)
                        
                    }
                }
                .buttonStyle(.plain)
                .accessibilityIdentifier("FavoriteButton")
            }
            
            VStack(spacing: 4) {
                Text("Sinopsis:")
                    .font(.subheadline)
                    .fontWeight(.bold)
...
